[gd_scene load_steps=2 format=3 uid="uid://b60awjdyd2k5r"]

[ext_resource type="Script" uid="uid://b6djhn1s3wqn2" path="res://sandbox/working/court_cell.gd" id="1_mkiru"]

[node name="CourtCell" type="ColorRect"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.74509805, 0.74509805, 0.74509805, 1)
script = ExtResource("1_mkiru")

[node name="CoordsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Test"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
